--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ canonical: https://minimal-light-theme.yliu.me/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
-google_scholar: https://scholar.google.com/
+google_scholar: https://scholar.google.com.tr/citations?hl=en&pli=1&user=ujbAZusAAAAJ
 cv_link: assets/files/curriculum_vitae.pdf
 github_link: https://github.com/ftth05
 linkedin: https://www.linkedin.com/fettahkiran
