--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ canonical: https://minimal-light-theme.yliu.me/
 google_scholar: https://scholar.google.com.tr/citations?hl=en&pli=1&user=ujbAZusAAAAJ
 cv_link: assets/files/curriculum_vitae.pdf
 github_link: https://github.com/ftth05
-linkedin: https://www.linkedin.com/fettahkiran
+linkedin: https://www.linkedin.com/in/fettahkiran/
 #twitter: https://twitter.com/
 
 # Images (e.g., your profile picture and your website's favicon) 
@@ -34,7 +34,7 @@ auto_dark_mode: true
 
 # Font
 # You can use this option to choose between Serif or Sans Serif fonts.
-font: "Serif" # or "Sans Serif"
+font: "Sans Serif" # "Serif" # or #"Sans Serif"
 
 # Google Analytics ID
 # Please remove this if you don't use Google Analytics
