reorder the social media icons

--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Basic Information 
-title: Fettah
+title: Fettah Kiran
 position: Researcher
 affiliation: University of Houston
 email: fkiran (at) uh.edu
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: minimal light
-description: The Minimal Light is a simple and elegant jekyll theme for academic personal homepage.
-canonical: https://minimal-light-theme.yliu.me/
+keywords: Affective Computing, Machine Learning, Computer Vision
+description: Fettah's academic personal homepage.
+canonical: 
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
