--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -3,7 +3,7 @@ main:
   - title: "Mediating role of positivity in the relationship between state anxiety and problematic social media use during the COVID-19 pandemic"
     authors: Ibrahim Arpaci, Kasim Karatas,  <strong>Fettah Kiran</strong>, Ismail Kusci, Ahmet Topcu
     scholar: https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ujbAZusAAAAJ&citation_for_view=ujbAZusAAAAJ:eQOLeE2rZwMC
-    conference_short: 
+    conference_short: Death Studies
     conference: Death Studies
     pdf: "https://www.researchgate.net/profile/Ibrahim-Arpaci-2/publication/369589223_Mediating_role_of_positivity_in_the_relationship_between_state_anxiety_and_problematic_social_media_use_during_the_COVID-19_pandemic/links/6423711c66f8522c38dc2e70/Mediating-role-of-positivity-in-the-relationship-between-state-anxiety-and-problematic-social-media-use-during-the-COVID-19-pandemic.pdf"
     code: 
