--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic Information 
 title: Fettah Kiran
-position: Researcher
+position: Ph.D. Condidate
 affiliation: University of Houston
 email: fkiran (at) uh.edu
 
