--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Basic Information 
 title: Fettah Kiran
-position: Ph.D. Condidate
+position: Ph.D. Candidate 
 affiliation: University of Houston
 email: fkiran (at) uh.edu
 
-# Search Engine Optimization (SEO)
+# Search Engine Optimization (SEO)s
 # The following information is used to improve the website traffic from search engines, e.g., Google.
 keywords: Affective Computing, Machine Learning, Computer Vision
 description: Fettah's academic personal homepage.
