--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: fkiran (at) uh.edu
 
 # Search Engine Optimization (SEO)s
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: Affective Computing, Machine Learning, Computer Vision
+keywords: Affective Computing, Machine Learning, Computer Vision, Thermal Imaging
 description: Fettah's academic personal homepage.
 canonical: 
 
