--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -11,7 +11,7 @@ main:
     bibtex: 
     notes: 
     image: ./assets/img/teaser_ACII23.png
-    mainpage:  
+    mainpage: https://acii-conf.net/2023/program/full-schedule  
 
 
   - title: "Mediating role of positivity in the relationship between state anxiety and problematic social media use during the COVID-19 pandemic"
