--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,10 @@ font: "Sans Serif" # "Serif" # or #"Sans Serif"
 # Please remove this if you don't use Google Analytics
 google_analytics: G-NFDDD8W23W
 
+pages:
+  - index.md
+  #- about.md
+
 # Use this project as a remote theme for GitHub Pages
 # See the guide here: https://docs.github.com/en/pages/setting-up-a-github-pages-site-with-jekyll/adding-a-theme-to-your-github-pages-site-using-jekyll
 remote_theme: yaoyao-liu/minimal-light
