--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ google_analytics: G-NFDDD8W23W
 
 pages:
   - index.md
-  #- about.md
+  - _includes/teaching.md
 
 # Use this project as a remote theme for GitHub Pages
 # See the guide here: https://docs.github.com/en/pages/setting-up-a-github-pages-site-with-jekyll/adding-a-theme-to-your-github-pages-site-using-jekyll
