--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,10 @@ pages:
   - index.md
   - _includes/teaching.md
 
+header_pages:
+  - index.md
+  - _includes/teaching.md
+
 # Use this project as a remote theme for GitHub Pages
 # See the guide here: https://docs.github.com/en/pages/setting-up-a-github-pages-site-with-jekyll/adding-a-theme-to-your-github-pages-site-using-jekyll
 remote_theme: yaoyao-liu/minimal-light
