--- a/_config.yml
+++ b/_config.yml
@@ -40,13 +40,13 @@ font: "Sans Serif" # "Serif" # or #"Sans Serif"
 # Please remove this if you don't use Google Analytics
 google_analytics: G-NFDDD8W23W
 
-pages:
-  - index.md
-  - _includes/teaching.md
+# pages:
+#   - index.md
+#   - _includes/teaching.md
 
-header_pages:
-  - index.md
-  - _includes/teaching.md
+# header_pages:
+#   - index.md
+#   - _includes/teaching.md
 
 # Use this project as a remote theme for GitHub Pages
 # See the guide here: https://docs.github.com/en/pages/setting-up-a-github-pages-site-with-jekyll/adding-a-theme-to-your-github-pages-site-using-jekyll
