--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,7 +1,7 @@
 main:
 
   - title: "Relatable and Humorous Videos Reduce Hyperarousal in Math Exams"
-    authors:  <strong>Fettah Kiran</strong>, Amanveer Wesley, Tammy Tolar, Paul Cirino, Panagiotis Tsiamyrtzis and Ioannis Pavlidis 
+    authors:  <strong>Fettah Kiran, Amanveer Wesley, Tammy Tolar, Paul Cirino, Panagiotis Tsiamyrtzis and Ioannis Pavlidis </strong> 
     scholar: https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ujbAZusAAAAJ&citation_for_view=ujbAZusAAAAJ:WF5omc3nYNoC
     conference_short: ACII23
     conference: Affective Computing + Intelligent Interaction
@@ -15,7 +15,7 @@ main:
 
 
   - title: "Mediating role of positivity in the relationship between state anxiety and problematic social media use during the COVID-19 pandemic"
-    authors: Ibrahim Arpaci, Kasim Karatas,  <strong>Fettah Kiran</strong>, Ismail Kusci, Ahmet Topcu
+    authors: <strong>Ibrahim Arpaci, Kasim Karatas,  Fettah Kiran, Ismail Kusci, Ahmet Topcu </strong>
     scholar: https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ujbAZusAAAAJ&citation_for_view=ujbAZusAAAAJ:eQOLeE2rZwMC
     conference_short: Death Studies
     conference: Death Studies
@@ -28,7 +28,7 @@ main:
     mainpage:  https://www.tandfonline.com/doi/full/10.1080/07481187.2021.1923588
 
   - title: "Quantifying Brain Activity State: EEG Analysis of Background Music in A Serious Game on Attention of Children"
-    authors: Ömer M. Soysal, <strong>Fettah Kiran</strong> Jianhua Chen
+    authors: <strong>Ömer M. Soysal, Fettah Kiran, Jianhua Chen </strong> 
     scholar: https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ujbAZusAAAAJ&citation_for_view=ujbAZusAAAAJ:W7OEmFMy1HYC
     conference_short: IEEE/ISMSIT
     conference: International Symposium on Multidisciplinary Studies and Innovative Technologies <strong>(ISMSIT)</strong>, 2020.
