--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,10 @@
+
+# --- List of links in the navigation bar --- #
+
+navbar-links:
+   Teaching: "teaching"
+
+
 # Basic Information 
 title: Fettah Kiran
 position: Ph.D. Candidate 
