--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,8 +1,8 @@
 main:
 
-  - title: "Facial self-touches are associated with mental stress in knowledge Work"
+  - title: "Facial Self-touches are Associated With Mental Stress in Knowledge Work"
     authors:  <strong>Fettah Kiran, MD Tanim Hasan, Kaushik Ganeshan, Gayatri Bhatambarekar, Abhijit Sarkar and Ioannis Pavlidis </strong> 
-    scholar: https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ujbAZusAAAAJ&citation_for_view=ujbAZusAAAAJ:WF5omc3nYNoC
+    scholar: https://scholar.google.com/citations?user=ujbAZusAAAAJ&hl=en&citsig=ACUpqDdRR_JqHGN-OgH7b2USIaVy
     conference_short: ACII25
     conference: Affective Computing + Intelligent Interaction
     pdf: "https://www.cpl.uh.edu/images/publication_files/C81-New.pdf"
