--- a/_config.yml
+++ b/_config.yml
@@ -54,8 +54,6 @@ remote_theme: yaoyao-liu/minimal-light
 
 # The following files will be removed from the generated website.
 exclude:
-  - Gemfile
-  - Gemfile.lock
   - README.md
   - README_zh_Hans.md
   - README_zh_Hant.md
@@ -63,3 +61,4 @@ exclude:
   - LICENSE
   - minimal-light.gemspec
   - html_source_file/
+  - .github/
