--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,9 @@ google_analytics: G-NFDDD8W23W
 #   - index.md
 #   - _includes/teaching.md
 
+# Repository information for GitHub Pages
+repository: f-kiran/f-kiran.github.io
+
 # Use this project as a remote theme for GitHub Pages
 # See the guide here: https://docs.github.com/en/pages/setting-up-a-github-pages-site-with-jekyll/adding-a-theme-to-your-github-pages-site-using-jekyll
 remote_theme: yaoyao-liu/minimal-light
