--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -31,9 +31,10 @@ jobs:
       
       - name: Build with Jekyll
         run: |
-          bundle exec jekyll build --baseurl "${{ steps.vars.outputs.base_path }}"
+          bundle exec jekyll build
         env:
           JEKYLL_ENV: production
+          PAGES_REPO_NWO: f-kiran/f-kiran.github.io
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
